--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game</title>
-  <script src="script/pixi.js"></script>
-  <script src="script/Bullet.js"></script>
-  <script src="script/Hero.js"></script>
-  <script src="script/Ground.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <link rel="stylesheet" href="css/level1-style.css"/>
 </head>
 <body>
-<script src="script/index.js"></script>
+<canvas id="gameCanvas" width="800" height="600"></canvas>
+
 <script>
     const socket = io();
     const canvas = document.getElementById('gameCanvas');
@@ -33,7 +30,7 @@
         drawSprite();
     }
 
-    setInterval(updatePosition, 10);
+    setInterval(updatePosition, 20);
 
     socket.on('move', (data) => {
         const { direction, action } = data;
