misha-07-22-new-front+back переименовал файлы

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Game</title>
-    <script src="src/main.js" type="module"></script>
+    <script src="script/main.js" type="module"></script>
     <style>
         body, html {
             margin: 0;
